feat: add project linking to time tracker
- Timer.tsx: project selector when starting a timer
- TimeEntryForm.tsx: project dropdown for manual entries
- TimeEntryCard.tsx: display linked project on entries

Closes time-tracker-project-link task

--- a/app/package.json
+++ b/app/package.json
@@ -14,7 +14,10 @@
     "test:run": "vitest run",
     "test:watch": "vitest --watch",
     "test:coverage": "vitest run --coverage",
-    "test:ci": "vitest run --coverage --reporter=junit"
+    "test:ci": "vitest run --coverage --reporter=junit",
+    "dev:web": "vite --config vite.config.web.ts",
+    "build:web": "tsc -b && vite build --config vite.config.web.ts",
+    "preview:web": "vite preview --config vite.config.web.ts"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
