--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,8 @@
     "express": "^4.21.0",
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.3",
+    "pino": "^10.3.0",
+    "pino-pretty": "^13.1.3",
     "puppeteer": "^24.36.1",
     "zod": "^3.23.0"
   },
@@ -25,6 +27,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22.0.0",
+    "@types/pino": "^7.0.4",
     "tsx": "^4.19.0",
     "typescript": "^5.6.0"
   }
