--- a/api/package.json
+++ b/api/package.json
@@ -23,6 +23,7 @@
     "pino": "^10.3.0",
     "pino-pretty": "^13.1.3",
     "puppeteer": "^24.36.1",
+    "swagger-ui-express": "^5.0.1",
     "zod": "^3.23.0"
   },
   "devDependencies": {
@@ -35,6 +36,7 @@
     "@types/node": "^22.0.0",
     "@types/pino": "^7.0.4",
     "@types/supertest": "^6.0.3",
+    "@types/swagger-ui-express": "^4.1.8",
     "supertest": "^7.2.2",
     "tsx": "^4.19.0",
     "typescript": "^5.6.0",
